Update bill_of_materials table and reporting

--- a/app/core/templates/core/reports/billofmaterialsreport.html
+++ b/app/core/templates/core/reports/billofmaterialsreport.html
@@ -16,6 +16,7 @@
             <th scope="col">Description</th>
             <th scope="col">Component ItemCode</th>
             <th scope="col">Component Description</th>
+            <th scope="col">Qty Per Bill</th>
             <th scope="col">Qty On Hand</th>
             <th scope="col">Units</th>
         </tr>
@@ -26,6 +27,7 @@
             <td>{{ item.item_description }}</td>
             <td>{{ item.component_item_code }}</td>
             <td>{{ item.component_item_description }}</td>
+            <td>{{ item.qtyperbill }}</td>
             <td>{{ item.qtyonhand }}</td>
             <td>{{ item.standard_uom }}</td>
         </tr>
