--- a/app/core/templates/core/issuesheets.html
+++ b/app/core/templates/core/issuesheets.html
@@ -13,7 +13,7 @@
         <div id="changedatebuttondiv">
         </div>
     </div>
-    {% for item in prod_runs_this_line %}
+    {% for item in runs_this_line %}
         <div class="contentarea">
             <br><br>
             <div class='header'>
@@ -21,13 +21,13 @@
                 <div class='headercontainer'>
                     <div>DATE: </div>
                     <div class="widener">
-                        <div class='centerer'>{{ issue_date }}</div>
+                        <div class='centerer'>{{ item.issue_date }}</div>
                     </div>
                 </div>
                 <div class='headercontainer'>
                     <div>LINE: </div>
                     <div class="widener">
-                        <div class='centerer'>{{ prod_line }}</div>
+                        <div class='centerer'>{{ item.prod_line }}</div>
                     </div>
                 </div>
                 <div class='headercontainer'>
@@ -46,8 +46,8 @@
                             <div>GAL ISSUED:&nbsp;&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum1 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty1|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.0.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.0.1 }}</div>
                         </div>
                     </div>
 
@@ -57,8 +57,8 @@
                             <div>GAL ISSUED:&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum2 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty2|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.1.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.1.1 }}</div>
                         </div>
                     </div>
                     
@@ -68,8 +68,8 @@
                             <div>GAL ISSUED:&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum3 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty3|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.2.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.2.1 }}</div>
                         </div>
                     </div>
                 </div>
@@ -88,8 +88,8 @@
                             <div>GAL ISSUED:&nbsp;&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum4 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty4|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.3.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.3.1 }}</div>
                         </div>
                     </div>
 
@@ -99,8 +99,8 @@
                             <div>GAL ISSUED:&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum5 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty5|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.4.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.4.1 }}</div>
                         </div>
                     </div>
                     
@@ -110,8 +110,8 @@
                             <div>GAL ISSUED:&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum6 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty6|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.5.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.5.1 }}</div>
                         </div>
                     </div>
                 </div>
@@ -125,8 +125,8 @@
                             <div>GAL ISSUED:&nbsp;&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum7 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty7|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.6.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.6.1 }}</div>
                         </div>
                     </div>
 
@@ -136,8 +136,8 @@
                             <div>GAL ISSUED:&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum8 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty8|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.7.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.7.1 }}</div>
                         </div>
                     </div>
                     
@@ -147,8 +147,8 @@
                             <div>GAL ISSUED:&nbsp;</div>
                         </div>
                         <div>
-                            <div>&nbsp;{{ item.batchnum9 }}</div>
-                            <div class='centerer widener'>&nbsp;{{ item.batchqty9|floatformat:2 }}</div>
+                            <div>&nbsp;{{ item.lot_numbers.8.0 }}</div>
+                            <div class='centerer widener'>&nbsp;{{ item.lot_numbers.8.1 }}</div>
                         </div>
                     </div>
                 </div>
@@ -177,4 +177,3 @@
         });    
     </script>
 {% endblock content %}
-
