--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -74,7 +74,8 @@
                         </td>
                     </tr>                
             {% endfor %}
-            {% for item in upcoming_blends %}
+            {{ upcoming_blends }}
+            {% for item in upcoming_runs %}
                     <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
                         <td class='text-center'>
                             <input type="checkbox" itemcode="{{ item.item_code }}" name="{{ item.item_code }}" class="checkbox"></input>
@@ -110,10 +111,10 @@
                         <td>{{ item.last_count_quantity|floatformat:0 }}: {{ item.last_count_date|date:"m-d-y" }}</td>
                         <td>{{ item.last_transaction_code }}: {{ item.last_transaction_date|date:"m-d-y" }}</td>
                         <td>
-                            {% if item.short_hour == 0 %}
-                                No
+                            {% if item.shortage %}
+                                {{ item.shortage_hour|floatformat:2 }}
                             {% else %}
-                                {{ item.short_hour|floatformat:2 }}
+                                No
                             {% endif %}
                         </td>
                     </tr>                
