Update the duplicates field in the lot number modal.

--- a/app/core/templates/core/modals/add-lotnum-modal.html
+++ b/app/core/templates/core/modals/add-lotnum-modal.html
@@ -21,6 +21,7 @@
                         <td><i>Duplicates?</i></td>
                         <td>
                             <select id="addLotNumDuplicateSelector">
+                                <option value=0>None</option>
                                 <option value=1>1</option>
                                 <option value=2>2</option>
                                 <option value=3>3</option>
