Final updates to upcomingblends and upcomingcomponents.

--- a/app/core/templates/core/inventorycounts/upcomingcomponents.html
+++ b/app/core/templates/core/inventorycounts/upcomingcomponents.html
@@ -21,7 +21,7 @@
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
                     {% if user.is_staff %}<th scope="col" class='text-center'>Add to Count List</th>{% endif %}
-                    <th scope="col" class='text-center'>Blend</th>
+                    <th scope="col" class='text-center'>Item Code</th>
                     <th scope="col" class='text-center'>Description</th>
                     <th scope="col" class='text-center'>Exp. Qty</th>
                     <th scope="col" class='text-center'>Last Count</th>
