Add countlist functionality to lotnumrecord page.

--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -21,6 +21,7 @@
                     </button>
                 </a>
             {% endif %}
+            <button id="create_list">Create Count List</button>
             <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteLotNumModal">
                 Delete Lots
             </button>
