--- a/app/core/templates/core/inventorycounts/upcomingblends.html
+++ b/app/core/templates/core/inventorycounts/upcomingblends.html
@@ -31,7 +31,7 @@
                 </tr>
             </thead>
             {% for item in blends_made_recently %}
-                    <tr {% if item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
+                    <tr {% if not item.needs_count %} style="background-color:rgb(250, 189, 109)" {% endif %}>
                         <td class='text-center'>
                             <input type="checkbox" itemcode="{{ item.item_code }}" name="{{ item.item_code }}" class="checkbox"></input>
                         </td>
