--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -40,7 +40,7 @@
                     <th scope="col" class="text-center">Schedule Status</th>
                 </tr>
             </thead>
-            {% for item in blend_these_queryset %}
+            {% for item in blend_shortages_queryset %}
                 <tr {% if item.component_item_code == "602037" or item.component_item_code == "602602" %}class="msrRow"{% endif %}{% if item.needs_count %}needsCount="needsCount"{% endif %}>
                     {% if user.is_staff %}<td class='text-center'>
                         <input type="checkbox" class="checkbox" itemcode={{ item.component_item_code }} name={{ item.component_item_code }}></input>
