Update reportcenter button.

--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -52,7 +52,7 @@
                 </tr>
             </tbody>
         </table>
-        <a href="" id="reportLink" target="blank" itemcode="" itemdesc="" reporttype="Chem-Shortages" style="display: none;">
+        <a href="" id="reportLink" target="_blank" itemcode="" itemdesc="" reporttype="Chem-Shortages" style="display: none;">
             <button id="submitbutton" class="btn btn-secondary">Generate Report</button>
         </a>
     </div>
