--- a/app/core/templates/core/modals/edit-foam-factor-modal.html
+++ b/app/core/templates/core/modals/edit-foam-factor-modal.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load core_extras %}
 <link rel="stylesheet" type="text/css" href="{% static 'core/css/editFoamFactorModal.css' %}">
  
 <div class="modal fade" id="editFoamFactorModal" tabindex="-1" aria-labelledby="editFoamFactorModalLabel" aria-hidden="true">
