Add necessary js and make the update & delete functions work.

--- a/app/core/templates/core/lotnumerrorform.html
+++ b/app/core/templates/core/lotnumerrorform.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotNumModal.css' %}">
 {% endblock scripts %}
 {% block content %}
-    <h1>Please correct errors</h1>
+    <h1>Please correct errors.</h1>
     <div id="newLotNumFormContainer">
         {% if submitted %}
             <a href='/core/lot-num-records'>View All Lot Numbers</a>
