--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -49,6 +49,7 @@
         <li><a class="dropdown-item" href="/admin">Django Admin</a></li>
         <li><a class="dropdown-item" href="/core/display-loop-status">Refresh Status</a></li>
         <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
+        <li><a class="dropdown-item" href="/core/foam-factors">Foam Factors</a></li>
     </ul>
 </li>
 <li class="nav-item">
