Add return link and error page for reports page.

--- a/app/core/templates/core/reports/blendrunorder.html
+++ b/app/core/templates/core/reports/blendrunorder.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+<div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
     <div class='text-center'>
         <h1>First Use of All Upcoming Blends</h1>
     </div>
