--- a/app/core/templates/core/reports/inventorycountsreport.html
+++ b/app/core/templates/core/reports/inventorycountsreport.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
     <div class='text-center'>
         <h1>Count History for {{ item_info.item_code }} {{ item_info.item_description }}</h1>
     </div>
