--- a/app/core/templates/core/reports/lotnumsreport.html
+++ b/app/core/templates/core/reports/lotnumsreport.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+<div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
     {% if no_lots_found %}
         <div class='text-center'>
             <h1> No lot numbers found. Please try another report.</h1>
