--- a/app/core/templates/core/reports/maxproduciblequantity.html
+++ b/app/core/templates/core/reports/maxproduciblequantity.html
@@ -4,6 +4,7 @@
 {% block title %}<title>Maximum Blend</title>{% endblock %}
 
 {% block content %}
+    <div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
     <div>
         <h1 class="text-center">Maximum Blend Capacity for</h1>
         <h1 class="text-center" id="itemCodeAndDescription"></h1>
