--- a/app/core/templates/core/reports/purchaseordersreport.html
+++ b/app/core/templates/core/reports/purchaseordersreport.html
@@ -4,6 +4,7 @@
 {% block title %}<title>Purchase Orders</title>{% endblock %}
 
 {% block content %}
+<div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
     {% if orders_not_found %}
         <div class='text-center'>
             <h1> No orders found.</h1>
