--- a/app/core/templates/core/reports/transactionsreport.html
+++ b/app/core/templates/core/reports/transactionsreport.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+<div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
 <link rel="stylesheet" type="text/css" href="{% static 'core/css/transactionsReport.css' %}">
     {% if no_transactions_found %}
         <div class='text-center'>
