--- a/app/core/templates/core/reports/countsandtransactionsreport.html
+++ b/app/core/templates/core/reports/countsandtransactionsreport.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'core/css/countsAndTransactions.css' %}">
+<div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
 <div class='text-center'>
     <h1>Physical Count and Transaction History for:</h1>
     <h2>{{ item_info.item_code }} {{ item_info.item_description }}</h2>
