--- a/app/core/templates/core/reports/startronreport.html
+++ b/app/core/templates/core/reports/startronreport.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class='text-center'><a href='/core/reports/'>Return to the Reports Page</a></div>
     <div class='text-center'>
         <h1>All Upcoming Runs for Startron Blends</h1>
     </div>
