Fix duplicate handling.

--- a/app/core/templates/core/foamfactorerrorform.html
+++ b/app/core/templates/core/foamfactorerrorform.html
@@ -1,18 +1,24 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 {% load static %}
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/addFoamFactorModal.css' %}">
 {% endblock scripts %}
 {% block content %}
     <h1>Please correct errors.</h1>
+    <p> 
+        {% if specific_error %} 
+            {{ specific_error }}
+        {% endif %}
+    </p>
     <div id="newFoamFactorContainer">
+        <a href='/core/foam-factors'>Return to Foam Factors Page</a>
         {% if submitted %}
-            <a href='/core/foam-factors'>View All Foam Factors</a>
+            <a href='/core/foam-factors'>Return to Foam Factors Page</a>
         {% else %}
             <form action="/core/foam-factors/?redirect-page=foam-factors" method=POST id="addFoamFactorElement">
                 {% csrf_token %}
                 <table id="foamfactorformtable">
-                    {{ add_foam_factor }}
+                    {{ add_foam_factor_form }}
                 </table>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
