--- a/app/core/templates/core/foamfactorerrorform.html
+++ b/app/core/templates/core/foamfactorerrorform.html
@@ -15,16 +15,33 @@
         {% if submitted %}
             <a href='/core/foam-factors'>Return to Foam Factors Page</a>
         {% else %}
-            <form action="/core/foam-factors/?redirect-page=foam-factors" method=POST id="addFoamFactorElement">
-                {% csrf_token %}
-                <table id="foamfactorformtable">
-                    {{ add_foam_factor_form }}
-                </table>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" name="addNewFoamFactor" value="Create New Lot"  class="btn btn-primary">Add</button>
-                </div>
-            </form>
+            {% if edit_or_add == 'edit' %}
+                <form action="{% url 'update-foam-factor' foam_factor_id %}" method=POST>
+                    {% csrf_token %}
+                    <table id="FoamFactorformtable">
+                        {{ foam_factor_form }}
+                    </table>
+                    <div class="modal-footer">
+                        <a href='/core/foam-factors'>
+                            <button type="button" class="btn btn-secondary">Cancel</button>
+                        </a>
+                        <button type="submit" name="editFoamFactor" action="" value="Save Changes"  class="btn btn-primary">Save Changes</button>
+                    </div>
+                </form>
+            {% else %}
+                <form action="/core/add-foam-factor/" method=POST id="addFoamFactorElement">
+                    {% csrf_token %}
+                    <table id="foamfactorformtable">
+                        {{ foam_factor_form }}
+                    </table>
+                    <div class="modal-footer">
+                        <a href='/core/foam-factors'>
+                            <button type="button" class="btn btn-secondary">Cancel</button>
+                        </a>
+                        <button type="submit" name="addNewFoamFactor" value="Create New Lot"  class="btn btn-primary">Save</button>
+                    </div>
+                </form>
+            {% endif %}
         {% endif %}
     </div>
 {% endblock %}
