--- a/app/core/templates/core/modals/add-foam-factor-modal.html
+++ b/app/core/templates/core/modals/add-foam-factor-modal.html
@@ -5,7 +5,7 @@
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
-            <h4 class="modal-title" id="addFoamFactorModalLabel"><b>New Lot Number</b></h4>
+            <h4 class="modal-title" id="addFoamFactorModalLabel"><b>New Foam Factor</b></h4>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div id="newFoamFactorFormContainer">
