Update and test.

--- a/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
+++ b/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
@@ -2,5 +2,5 @@
 {% load static %}
 {% block title %}<title>GHS Label</title>{% endblock %}
 {% block scripts %}
-    <link rel="stylesheet" type="text/css" href ="{% static 'core/GHSLabel.css' %}">
+    <link rel="stylesheet" type="text/css" href ="{% static 'core/css/GHSLabel.css' %}">
 {% endblock %}
