Update lookupform, lotnumrecords button.

--- a/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
+++ b/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
@@ -8,6 +8,9 @@
 
 {% block content %}
 
+    <div class="noPrint" id="linkContainer">
+        <a href="/core/display-ghs-label-search">Return to search page</a>
+    </div>
     <div class="labelContainer">
         <!-- Content for the first half of the page -->
         <h2>Item Code: {{ this_ghs_pictogram.item_code }}</h2>        
