--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,7 +82,7 @@
     {% block belowdeckscripts %}
         <script type="module" src="{% static 'core/js/pageModules/base.js' %}"></script>
         <script >
-            let konamiCode = ['ArrowUp', 'ArrowDown', 'ArrowUp', 'ArrowDown', 'ArrowLeft', 'ArrowRight', 'ArrowLeft', 'ArrowRight', 'b', 'a', 'Enter'];
+            let konamiCode = ['ArrowUp', 'ArrowUp', 'ArrowDown', 'ArrowDown', 'ArrowLeft', 'ArrowRight', 'ArrowLeft', 'ArrowRight', 'b', 'a', 'Enter'];
             let konamiIndex = 0;
             let konamiActivated = false;
 
