--- a/app/core/templates/core/GHSlabelGen/ghslookuppage.html
+++ b/app/core/templates/core/GHSlabelGen/ghslookuppage.html
@@ -15,6 +15,8 @@
         
         <h2>Description:</h2>
         <input type="text" id="id_item_description_0" placeholder="Search by Desc (min. 3 characters)" style="width:300px;" enterkeyhint="search"></input>
+        <br>
+        <div style="display:flex; "><input type="checkbox" id="autofillcheckbox" checked></input><p>Use Autofill</p></div>
 
         <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
         <br>
