--- a/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
+++ b/app/core/templates/core/GHSlabelGen/ghsprinttemplate.html
@@ -17,7 +17,7 @@
         <h2>Item Desc: {{ this_ghs_pictogram.item_description }}</h2>
 
         <p class="lotNumberContainer" style="display:none;">Lot Number: <input type="text" class="lotNumberField" value=""></p>
-        <img src="{{ image_url }}">
+        <img class="hazardsimage" src="{{ image_url }}">
     </div>
       
     <div class="labelContainer">
@@ -26,7 +26,7 @@
         <h2>Item Desc: {{ this_ghs_pictogram.item_description }}</h2>  
 
         <p class="lotNumberContainer" style="display:none;">Lot Number: <input type="text" class="lotNumberField" value=""></p>
-        <img src="{{ image_url }}">
+        <img class="hazardsimage" src="{{ image_url }}">
     </div>
 
     <div class="noPrint buttonContainer">
