--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -51,16 +51,9 @@
         <li><a class="dropdown-item" href="/core/display-loop-status">Refresh Status</a></li>
         <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
         <li><a class="dropdown-item" href="/core/foam-factors">Foam Factors</a></li>
+        <li><a class="dropdown-item" href="/core/display-all-GHS-pictograms">Edit GHS Pictograms</a></li>
     </ul>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="/core/feedback/">Feedback</a>
 </li>
-{% comment %} <li class="nav-item" style="display:none;"  id="refreshWarningLink">
-    <a class="nav-link navbar-help pulse-element" href="/core/display-loop-status"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Issue with background data refresh.">
-        <div>
-            <img src="{% static 'core/media/exclamatino.png' %}" height="50" width="75">
-        </div>
-    </a>
-    <div class="tooltip"></div>
-</li> {% endcomment %}
